--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Contact me</h2>
         <p>Fill the fields and I will do my best to reply as soon as possible.</p>
         <!-- Im using formsubmit.com (free) in the action method to get the message -->
-        <form id="rogerform" name="rogerform" action="https://formsubmit.co/rparedes@costra.com" method="POST">
+        <form id="rogerform" name="rogerform" action="https://formsubmit.co/roger_paredes@yahoo.com.ar" method="POST">
             <legend>CONTACT INFO</legend>
             <div class="formcontainer">
                 <label for="firstname">*Type your first name: </label>
