--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <h2>Contact me</h2>
         <p>Fill the fields and I will do my best to reply as soon as possible.</p>
-        <!-- Im using formsubmit.com (free) in the action method to get the message -->
+        <!-- Im using formsubmit.com (free) in the action method to get the message, the d8f9ea64894c49744c4889ae6a3ce6cb string hides my email -->
         <form id="rogerform" name="rogerform" action="https://formsubmit.co/d8f9ea64894c49744c4889ae6a3ce6cb" method="POST">
             <legend>CONTACT INFO</legend>
             <div class="formcontainer">
