--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h2>Contact me</h2>
         <p>Fill the fields and I will do my best to reply as soon as possible.</p>
         <!-- Im using formsubmit.com (free) in the action method to get the message, the d8f9ea64894c49744c4889ae6a3ce6cb string hides my email -->
-        <form id="rogerform" name="rogerform" action="https://formsubmit.co/d8f9ea64894c49744c4889ae6a3ce6cb" method="POST" />
-            <legend>CONTACT INFO</legend>
+        <form id="rogerform" name="rogerform" action="https://formsubmit.co/d8f9ea64894c49744c4889ae6a3ce6cb" method="POST"> 
+                <legend>CONTACT INFO</legend>
             <div class="formcontainer">
                 <label for="firstname">*Type your first name: </label>
                 <input type="firstname" id="firstname" name="firstname" placeholder="Name" autofocus required>
@@ -41,10 +41,10 @@
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_autoresponse" value="Thak you for your message, I value it. I'll try to respond, but do not hate me if I do not. ">
                 <input type="hidden" name="_blacklist" value="free, porn, naked, bitcoin, newsletter">
-                <input type="hidden" name="_next" value="thanks.html">
+                <input type="hidden" name="_next" value="https://rpared.github.io/ITC5103_Webform/thanks.html">
             </div>
-            <div id="btn">
-            <input id="submit-btn" type="submit" value="Submit" onclick="validateForm()">
+                <div id="btn">
+                <input id="submit-btn" type="submit" value="Submit">
             </div>
         </form>
     </main>
