--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/normalize.css" type="text/css">
     <link rel="stylesheet" href="styles/style.css" type="text/css">
     <script src="js/form.js" defer></script>
+    <script src="js/background.js" defer></script>
     <title>Validated Contact Form</title>
 </head>
 <body>
@@ -47,6 +48,9 @@
             </div>
         </form>
     </main>
-
+    <div class="copyr">© Roger Paredes 2023</div>
+    <section id="background">
+        <div id="rectangle"></div>
+    </section>
 </body>
 </html>
