--- a/thanks.html
+++ b/thanks.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Guntur:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css" type="text/css">
     <link rel="stylesheet" href="styles/style.css" type="text/css">
     <script src="js/form.js" defer></script>
+    <script src="js/background.js" defer></script>
     <title>Thank you!</title>
 </head>
 <body>
@@ -17,8 +18,12 @@
         <p>This was a contact form that was validated through Javascript</p>
     </header>
     <main>
-        <h2>Thank you, your message was sent.</h2>
+        <h2>Thank you,</h2>
+        <h3>Your message was sent.</h3>   
     </main>
-
+    <div class="copyr">© Roger Paredes 2023</div>
+    <section id="background">
+        <div id="rectangle"></div>
+    </section>
 </body>
 </html>
