--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Guntur:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;600;800&display=swap" rel="stylesheet">    <link rel="stylesheet" href="styles/normalize.css" type="text/css">
     <link rel="stylesheet" href="styles/normalize.css" type="text/css">
     <link rel="stylesheet" href="styles/style.css" type="text/css">
     <script src="js/form.js" defer></script>
@@ -37,6 +37,7 @@
             <div class="formcontainer">
                 <label for="message">*Enter your message: </label>
                 <textarea name="message" id="message" cols="5" rows="5" placeholder="Some nice words or insults ha ha." required></textarea>
+                <atta
                 <!-- These are hidden tags for the reception -->
                 <input type="hidden" name="_subject" value="New message from ITS Web Assignment 4 Contact Form">
                 <input type="hidden" name="_captcha" value="false">
